SunSkyDemo/force-app/main/default/objects/Exception__c/Exception__c.object-meta.xml
<CustomObject>
    <description>Custom object used to store caught exceptions. Workflow rules can be leveraged to send email alerts upon record creation, and Process Builder can be used to send messages to a Chatter group or user.</description>
    <label>Exception</label>
    <nameField>
        <displayFormat>E-{000000}</displayFormat>
        <label>Exception Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Exceptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>