SunSkyDemo/force-app/main/default/objects/Exception__c/fields/JobScope__c.field-meta.xml
<CustomField>
    <fullName>JobScope__c</fullName>
    <label>Job Scope Records</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>