SunSkyDemo/force-app/main/default/objects/Exception__c/listViews/All_Exceptions.listView-meta.xml
<ListView>
    <fullName>All_Exceptions</fullName>
    <columns>NAME</columns>
    <columns>Cause__c</columns>
    <columns>Line_Number__c</columns>
    <columns>Message__c</columns>
    <columns>Stack_Trace_String__c</columns>
    <columns>Type_Name__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All Exceptions</label>
</ListView>